[FIX] web: Fix product, rating etc. layout of kanban view on groupby
Due to commit 7ecae33
which is introduces Next Activity icon on kanban cards at left bottom
of the card in contacts

however, this change effects other kanban cards making image and
details separated when group by on kanban. such effected kanban views
are ratings in project, products and channels in live chat so fix the
layout issue for all the above kanban cards and it will not effect the
contact kanban view.

TaskID : 2237638
Closes: #49620

--- a/addons/web/static/src/scss/kanban_view.scss
+++ b/addons/web/static/src/scss/kanban_view.scss
@@ -354,7 +354,6 @@
         }
 
         .oe_kanban_details {
-            display: inherit;
             flex-flow: column;
             width: 100%;
 
